deploy: d6d281e8b1760a644cce4f3b2f2b285bdd53f3b9

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Les occasions du Club St Hil'Air">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="standconsult">
+  <meta name="apple-mobile-web-app-title" content="Stand d'Occaz'">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <title>standconsult</title>
@@ -31,7 +31,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    const serviceWorkerVersion = "2137327475";
+    const serviceWorkerVersion = "1409614955";
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
